bridge/base/postgres-service.yaml
# check if there is at least one published port

#! postgres-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres-published
    namespace: grazyna-50
    labels:
        com.docker.compose.project: grazyna_50
        com.docker.compose.service: postgres
spec:
    selector:
        com.docker.compose.project: grazyna_50
        com.docker.compose.service: postgres
    ports:
        - name: postgres-5433
          port: 5433
          protocol: TCP
          targetPort: postgres-5432

# check if there is at least one published port
