bridge/base/redis-service.yaml
#! redis-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: redis-published
    namespace: grazyna-50
    labels:
        com.docker.compose.project: grazyna_50
        com.docker.compose.service: redis
spec:
    selector:
        com.docker.compose.project: grazyna_50
        com.docker.compose.service: redis
    ports:
        - name: redis-6380
          port: 6380
          protocol: TCP
          targetPort: redis-6379
