bridge/base/grazyna-network-network-policy.yaml
#! grazyna-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: grazyna-network-network-policy
    namespace: grazyna-50
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.grazyna-network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.grazyna-network: "true"
